--- a/KaranSinMorsommeFerie/A Hoved Database/index.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/index.html
@@ -33,11 +33,13 @@
 
 
       <section class="lang">
-        <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
+        Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt
       </section>
 
       <section class="usynlig">
 
+
+        <h3><a href="klær.html"></a></h3>
       </section>
 
       <section class="logo">
@@ -47,6 +49,9 @@
 
       <section class="usynlig1">
       </section>
+
+
+
 
 
 
@@ -62,9 +67,7 @@
 
 
 
-
-
-      <section class="lenke logginn">
+      <section class="lenke logginn ønskeliste">
 
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
 
@@ -72,22 +75,22 @@
 
       </section>
 
-      <section class="lenke logginn">
+      <section class="lenke logginn handlekurv">
 
 
         <a href="logginn.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
 
         <a href="l"><br>KURV</a>
 
-      </section>
 
     </section>
 
+</section>
 
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <input type="text" placeholder="Søk etter klær eller merker...">
-       <button type="submit"><i class="fa fa-search"></i></button>
+      <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
 
@@ -133,12 +136,12 @@
 
       <section class="dropned">
         <a class="dropknapp" onclick="Salg_alle()">Nyheter</a>
-        </a>
+
       </section>
 
       <section class="dropned">
         <a class="dropknapp" onclick="Salg_alle()">Salg</a>
-        </a>
+
       </section>
 
 
@@ -153,7 +156,7 @@
       <a href="sko.html"> Get up to 50% off shoes!</a>
     </section>
     <section class="shirts_get">
-      <a href="klær.html"> Get up to 60% off shirts!</a>
+      <a href="skjorter.html"> Get up to 60% off shirts!</a>
     </section>
 
 
@@ -171,31 +174,35 @@
     <div class="slider-wrapper">
       <!--innermost wrapper element   -->
       <img src="bilder_klær_riktig/bg-5.jpg" alt="First" class="slide"></img>
+      <img src="bilder_klær_riktig/slideshow1.jpg" alt="Second" class="slide"></img>
+      <img src="bilder_klær_riktig/slideshow2.jpg" alt="Third" class="slide"> </img>
+    </div>
+   </div>
 
-      <img src="bilder_klær_riktig/slideshow1.jpg" alt="Second" class="slide" </img> <img src="bilder_klær_riktig/slideshow2.jpg" alt="Third" class="slide" </img> </div> </div> <h1 class="nyheter_forside_overskrift">Nyheter</h1>
 
+   <h1 class="nyheter_forside_overskrift">Nyheter</h1>
 
 
       <section class="nyheter_forside">
 
         <section class="nyheter_valg_forside">
-          <a id="nyhetAlle" onclick="nyheter_alle()">Alle</a>
+          <button class="nyhetAlle" onclick="nyheter_alle()">Alle</button>
         </section>
 
         <section class="nyheter_valg_forside">
-          <a onclick="nyheter_klaer()">Klær</a>
+          <button onclick="nyheter_klaer()">Klær</button>
         </section>
 
         <section class="nyheter_valg_forside">
-          <a onclick="nyheter_sko()">Sko</a>
+          <button onclick="nyheter_sko()">Sko</button>
         </section>
 
         <section class="nyheter_valg_forside">
-          <a onclick="nyheter_tilbehor()">Tilbehør</a>
+          <button onclick="nyheter_tilbehor()">Tilbehør</button>
         </section>
 
         <section class="nyheter_valg_forside">
-          <a onclick="nyheter_sport()">Sport</a>
+          <button onclick="nyheter_sport()">Sport</button>
         </section>
 
 
@@ -211,260 +218,256 @@
 
       </main>
 
-      <section class="reklame_under">
-        <section class="reklame_under_eneste">
-          1
-        </section>
+
+      <section class="footer_og_video">
+        <video autoplay muted loop id="myVideo">
+          <source src="bilder_klær_riktig/Pexels Videos 5168.mp4" type="video/mp4">
+        </video>
+
+        <!-- Optional: some overlay text to describe the video -->
+        <div class="content">
+          <footer>
+
+            <section class="hele_footer">
 
 
-        <section class="reklame_under_eneste">
-          2
-        </section>
+              <section class="om_oss_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>INFORMASJON</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="logginn.html"> LOGG INN</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="oss.html">FÅ NYHETSBREV</a></td>
+                    </tr>
+                  </tbody>
 
+                </table>
+              </section>
 
-        <section class="reklame_under_eneste">
-          3
-        </section>
+              <section class="">
+                <table>
+                  <thead>
+                    <tr>
+                      <th><a href="index.html">VARER</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td> <a href="klær.html">klær</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="sport.html">sport</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="sko.html">sko</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="tilbehør.html">tilbehør</a></td>
+                    </tr>
+                  </tbody>
 
+                </table>
 
-      </section>
+              </section>
 
+              <section class="oss_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th><a href="oss.html">OM OSS</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="oss.html">søk jobb</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="oss.html">ansatte</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="oss.html">historikk</a></td>
+                    </tr>
 
+                  </tbody>
 
+                </table>
 
-
-      <footer>
-
-        <section class="hele_footer">
-
-
-          <section class="om_oss_footer">
-            <table>
-              <thead>
-                <tr>
-                  <th>INFORMASJON</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><a href="logginn.html"> LOGG INN</a></td>
-                </tr>
-                <tr>
-                  <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
-                </tr>
-                <tr>
-                  <td><a href="kontakt.html">KONTAKT OSS</a></td>
-                </tr>
-                <tr>
-                  <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
-                </tr>
-              </tbody>
-
-            </table>
-          </section>
-
-          <section class="">
-            <table>
-              <thead>
-                <tr>
-                  <th><a href="index.html">VARER</a></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td> <a href="klær.html">klær</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="sport.html">sport</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="sko.html">sko</a></td>
-                </tr>
-                <tr>
-                  <td><a href="tilbehør.html">tilbehør</a></td>
-                </tr>
-              </tbody>
-
-            </table>
-
-          </section>
-
-          <section class="oss_footer">
-            <table>
-              <thead>
-                <tr>
-                  <th><a href="oss.html">OM OSS</a></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><a href="oss.html">søk jobb</a></td>
-                </tr>
-                <tr>
-                  <td><a href="oss.html">ansatte</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td><a href="oss.html">historikk</a></td>
-                </tr>
-
-              </tbody>
-
-            </table>
-
-          </section>
+              </section>
 
 
 
 
-          <section class="sosial_footer">
-            <table>
-              <thead>
-                <tr>
-                  <th>Følg oss</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
-                  <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
-                  <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
-                </tr>
+              <section class="sosial_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Følg oss</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                      <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                      <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                    </tr>
 
-              </tbody>
+                  </tbody>
 
-            </table>
-          </section>
-
-
-
-        </section>
-      </footer>
-
-      <script>
-        const main = document.querySelector("main");
-        //Skriv referanser til database under her:
-        const db = firebase.database();
-        const bukser = db.ref("varer/bukser");
-        const skjorter = db.ref("varer/skjorter");
-        const gensere = db.ref("varer/gensere");
-        const sport = db.ref("varer/sport");
-        const jakker = db.ref("varer/jakker");
-        const sko = db.ref("varer/sko");
-        const tilbehor = db.ref("varer/tilbehor");
+                </table>
+              </section>
 
 
 
-        function visKlaer(snapshot) {
-          //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
-          let varer = snapshot.val();
-          main.innerHTML +=
-            `
-        <article class="vare">
-        <a href="klesplagg.html?id={key}">
-        <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
-        <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-        <p class="pris_varer">Pris: ${varer.pris} kr</p>
-        </a>
-        </article>
-    `;
-        }
+            </section>
+
+
+          </footer>
 
 
 
 
-        function nyheter_alle() {
-          main.innerHTML = ``;
-          bukser
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          skjorter
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          sko
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-
-          tilbehor
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-
-          gensere
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          sport
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-
-          jakker
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-        }
-
-
-        function nyheter_klaer() {
-          main.innerHTML = ``;
-          gensere
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          jakker
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          bukser
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-          skjorter
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-
-        }
-
-        function nyheter_sko() {
-          main.innerHTML = ``;
-          sko
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-        }
-
-
-        function nyheter_tilbehor() {
-          main.innerHTML = ``;
-          tilbehor
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-        }
-
-        function nyheter_sport() {
-          main.innerHTML = ``;
-          sport
-            .orderByChild("Nyheter")
-            .equalTo(true)
-            .on("child_added", visKlaer);
-        }
+          <script>
+            const main = document.querySelector("main");
+            //Skriv referanser til database under her:
+            const db = firebase.database();
+            const bukser = db.ref("varer/bukser");
+            const skjorter = db.ref("varer/skjorter");
+            const gensere = db.ref("varer/gensere");
+            const sport = db.ref("varer/sport");
+            const jakker = db.ref("varer/jakker");
+            const sko = db.ref("varer/sko");
+            const tilbehor = db.ref("varer/tilbehor");
 
 
 
+            function visVare(snapshot) {
+              //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
+              let varer = snapshot.val();
+              let key = snapshot.key;
+              let parent = snapshot.ref.parent.key;
+              let parentParent = snapshot.ref.parent.parent.key;
+              let ref = parent +"/" + key;
 
-        nyheter_alle(); // Funksjon som kjøres når siden lastes
-      </script>
+              console.log(snapshot.val())
 
-      <footer>
-      </footer>
+              main.innerHTML +=
+                `
+                <article class="vare">
+        <a href="klesplagg.html?id=${key}&parent=${parent}">
+                <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
+                <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
+                <p class="pris_varer">Pris: ${varer.pris} kr</p>
+                </a>
+                </article>
+              `;
+            }
+
+
+
+            function nyheter_alle() {
+              main.innerHTML = ``;
+              bukser
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              skjorter
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              sko
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              tilbehor
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+
+              gensere
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              sport
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+
+              jakker
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+            }
+
+
+            function nyheter_klaer() {
+              main.innerHTML = ``;
+              gensere
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              jakker
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              bukser
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+              skjorter
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+
+            }
+
+            function nyheter_sko() {
+              main.innerHTML = ``;
+              sko
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+            }
+
+
+            function nyheter_tilbehor() {
+              main.innerHTML = ``;
+              tilbehor
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+            }
+
+            function nyheter_sport() {
+              main.innerHTML = ``;
+              sport
+                .orderByChild("Nyheter")
+                .equalTo(true)
+                .on("child_added", visVare);
+            }
+
+
+
+
+            nyheter_alle(); // Funksjon som kjøres når siden lastes
+          </script>
+
+          <footer>
+          </footer>
 
 
 </body>
