--- a/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="nb" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="klesplagg.css">
-    <title></title>
-    <script src="klesplagg.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
-    <script>
-      // Initialize Firebase
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="klesplagg.css">
+  <title></title>
+  <script src="main.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+  <script>
+    // Initialize Firebase
       var config = {
         apiKey: "AIzaSyBXt6HrwrG3frVTfTwqeXKUOOmNr5jwON0",
         authDomain: "hoved-klesbutikk-riktig.firebaseapp.com",
@@ -22,163 +23,319 @@
 
 
 
-  </head>
-  <body>
-    <header>
+</head>
 
-      <section class="header_øverst">
+<body>
+  <header>
 
-
-        <section class="lang">
-          <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
-        </section>
-
-        <section class="usynlig">
-
-        </section>
-
-        <section class="logo">
-          <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
-        </section>
+    <section class="header_øverst">
 
 
-        <section class="usynlig1">
-        </section>
+      <section class="lang">
+        <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
+      </section>
+
+      <section class="usynlig">
+
+      </section>
+
+      <section class="logo">
+        <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
+      </section>
 
 
-
-
-        <section class="lenke logginn">
-
-
-          <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
-          <a href="logginn.html"><br>LOGG INN</a>
-
-        </section>
+      <section class="usynlig1">
+      </section>
 
 
 
 
-
-        <section class="lenke logginn">
-
-          <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
-          <a href="ønskeliste.html">ØNSKELISTE</a>
-
-        </section>
-
-        <section class="lenke logginn">
+      <section class="lenke logginn">
 
 
-          <a href="logginn.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
+        <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
 
-          <a href="l"><br>KURV</a>
-
-        </section>
+        <a href="logginn.html"><br>LOGG INN</a>
 
       </section>
 
 
-      <section class="søkemotor">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <input type="text" placeholder="Søk etter klær eller merker...">
-        <button type="submit"><i class="fa fa-search"></i></button>
+
+
+
+      <section class="lenke logginn">
+
+        <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+
+        <a href="ønskeliste.html">ØNSKELISTE</a>
+
+      </section>
+
+      <section class="lenke logginn">
+
+
+        <a href="logginn.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
+
+        <a href="l"><br>KURV</a>
+
+      </section>
+
+    </section>
+
+
+    <section class="søkemotor">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <input type="text" placeholder="Søk etter klær eller merker...">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </section>
+
+
+    <nav class="navigation">
+
+
+
+
+      <section class="dropned">
+        <a href="klær.html" class="dropknapp">Klær</a>
+        <section class="dropned-content">
+          <a onclick="gensere1()">gensere</a>
+          <a onclick="bukser1()">Bukser</a>
+          <a onclick="skjorter1()">skjorter</a>
+        </section>
       </section>
 
 
-      <nav class="navigation">
+
+      <section class="dropned">
+        <a class="dropknapp" onclick="Sport1()">Sport</a>
+
+        <section class="dropned-content">
+          <a href="virker_ikke.html" onclick="sport1()">Sport overdeler</a>
+          <a href="virker_ikke.html">Sport underdeler</a>
+          <a href="virker_ikke.html">Sport relatert</a>
+        </section>
+      </section>
+
+      <section class="dropned">
+        <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
+        <section class="dropned-content">
+          <a onclick="bukser1()"> klokker</a>
+          <a href="virker_ikke.html">bagger</a>
+          <a href="virker_ikke.html">caps</a>
+        </section>
+      </section>
+
+
+      <section class="dropned">
+        <a class="dropknapp" onclick="Sko1()">Sko</a>
+      </section>
+
+      <section class="dropned">
+        <a class="dropknapp" onclick="Nyheter()">Nyheter</a>
+        </a>
+      </section>
+
+      <section class="dropned">
+        <a class="dropknapp" onclick="Salg1()">Salg</a>
+        </a>
+      </section>
 
 
 
 
-        <section class="dropned">
-          <a href="klær.html" class="dropknapp">Klær</a>
-          <section class="dropned-content">
-            <a onclick="gensere1()">gensere</a>
-            <a onclick="bukser1()">Bukser</a>
-            <a onclick="skjorter1()">skjorter</a>
+    </nav>
+
+  </header>
+
+
+  <main>
+
+  </main>
+
+ <h1 class="overskrift_folk_liker_også">Folk liker også</h1>
+<section class="overskrift_folk_liker_også">
+
+</section>
+
+
+
+      <section class="reklame2">
+        <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
+      </section>
+      <footer>
+      </footer>
+
+
+      <footer>
+
+        <section class="hele_footer">
+
+
+          <section class="om_oss_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th>INFORMASJON</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="logginn.html"> LOGG INN</a></td>
+                </tr>
+                <tr>
+                  <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                </tr>
+                <tr>
+                  <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+                </tr>
+                <tr>
+                  <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
+                </tr>
+              </tbody>
+
+            </table>
           </section>
-        </section>
 
+          <section class="">
+            <table>
+              <thead>
+                <tr>
+                  <th><a href="index.html">VARER</a></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td> <a href="klær.html">klær</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="sport.html">sport</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="sko.html">sko</a></td>
+                </tr>
+                <tr>
+                  <td><a href="tilbehør.html">tilbehør</a></td>
+                </tr>
+              </tbody>
 
+            </table>
 
-        <section class="dropned">
-          <a class="dropknapp" onclick="Sport1()">Sport</a>
-
-          <section class="dropned-content">
-            <a href="virker_ikke.html" onclick="sport1()">Sport overdeler</a>
-            <a href="virker_ikke.html">Sport underdeler</a>
-            <a href="virker_ikke.html">Sport relatert</a>
           </section>
-        </section>
 
-        <section class="dropned">
-          <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
-          <section class="dropned-content">
-            <a onclick="bukser1()"> klokker</a>
-            <a href="virker_ikke.html">bagger</a>
-            <a href="virker_ikke.html">caps</a>
+          <section class="oss_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th><a href="oss.html">OM OSS</a></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="oss.html">søk jobb</a></td>
+                </tr>
+                <tr>
+                  <td><a href="oss.html">ansatte</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="oss.html">historikk</a></td>
+                </tr>
+
+              </tbody>
+
+            </table>
+
           </section>
+
+
+
+
+          <section class="sosial_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th>Følg oss</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                  <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                  <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                </tr>
+
+              </tbody>
+
+            </table>
+          </section>
+
+
+
         </section>
+      </footer>
+  <script>
+    const main = document.querySelector("main");
 
 
-        <section class="dropned">
-          <a class="dropknapp" onclick="Sko1()">Sko</a>
-        </section>
-
-        <section class="dropned">
-          <a class="dropknapp" onclick="Nyheter()">Nyheter</a>
-          </a>
-        </section>
-
-        <section class="dropned">
-          <a class="dropknapp" onclick="Salg1()">Salg</a>
-          </a>
-        </section>
+    let url_string = window.location.href;
+    let url = new URL(url_string);
+    let id = url.searchParams.get("id");
+    let parentId = url.searchParams.get("parent");
+    //let parentParent = url.searchParams.get("parentParent");
 
 
+    console.log("id:" + id );
 
+    //Skriv referanser til database under her:
+    const db = firebase.database();
+    const Valgt_vare = db.ref("varer/"+parentId+"/"+id);
+    const bukser = db.ref("varer/bukser");
+    const skjorter = db.ref("varer/skjorter");
+    const gensere = db.ref("varer/gensere");
+    const sport = db.ref("varer/sport");
+    const jakker = db.ref("varer/jakker");
+    const sko = db.ref("varer/sko");
+    const tilbehor = db.ref("varer/tilbehor");
 
-      </nav>
+    Valgt_vare.on("value",visVare);
+        // Funksjon som kjøres når siden lastes
 
-    </header>
+    function visVare(snapshot) {
+      let key = snapshot.key;
+      let data = snapshot.val();
+      let parent = snapshot.ref.parent.key;
+      //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
+      main.innerHTML +=
+        `
+<section class="bilde_liten">
+<section class="bilde_liten1">  <img src="${data.bilde2}" alt=""> </section>
+<section class="bilde_liten2">  <img src="${data.bilde3}" alt=""> </section>
+</section>
+<section class="bilde_stor">  <img src="${data.bilde1}" alt=""> </section>
+<section class="varer_info">
+<h1 class="navn_varer">${data.modell} - ${data.merke1}</h1>
+<p class="pris_varer">Pris: ${data.pris} kr  <a href="kundeservice.html" class="tilbakemelding">Tilbakemelding</a> </p>
+<section class="styled-select slate">
+  <select>
+    <option value="bilde" class="hver_str_alene"> Størrelse </option>
+    <option value="juice">XS</option>
+    <option value="vann">S</option>
+    <option value="vann">M</option>
+    <option value="vann">L</option>
+    <option value="vann">XL</option>
+  </select>
+</section>
 
+<button type="submit" class="handlekurv_knapp"> Legg til i handlekurv</button>
 
-<main>
-
-</main>
-<script>
-const main = document.querySelector("main");
-//Skriv referanser til database under her:
-const db = firebase.database();
-const bukser = db.ref("varer/bukser");
-const skjorter = db.ref("varer/skjorter");
-const gensere = db.ref("varer/gensere");
-const sport = db.ref("varer/sport");
-const jakker = db.ref("varer/jakker");
-const sko = db.ref("varer/sko");
-const tilbehor = db.ref("varer/tilbehor");
-
-
-
-ffunction visKlaer(snapshot) {
-  //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
-  let varer = snapshot.val();
-    let key = snapshot.key;
-    let objekt = snapshot.val();
-    let parent = snapshot.ref.parent.key;
-  main.innerHTML +=
-    `
-<article class="vare">
-<section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
-<h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-<p class="pris_varer">Pris: ${varer.pris}</p>
-</article>
 `;
-}
-   // Funksjon som kjøres når siden lastes
+    }
+
   </script>
-  </body>
+
+
+</body>
+
 </html>
