--- a/KaranSinMorsommeFerie/A Hoved Database/logginn.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/logginn.html
@@ -1,32 +1,149 @@
 <!DOCTYPE html>
 <html lang="no">
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Log in</title>
-      <style>
-          body {
-              background-color: #dbdde0;
-              padding:100px;
-          }
-          h1 {
-              font-family: sans-serif;
-              color: darkcyan;
-              text-align: center;
-              font-size: 65px;
-              margin: 48px 0px;
-          }
-      </style>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="logginn.css">
+  <script src="main.js">
+  </script>
+  <title>Log in</title>
+
+</head>
+
+<body>
   </head>
+
   <body>
-    <button onclick="goBack()"><--Tilbake</button>
-      <h1><a href="index.html">SISAKA</a></h1>
-      <div id="firebaseui-auth-container"></div>
-<!-- LIM INN FIREBASE-KODEN DIN HER -->
-<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
-<script>
-  // Initialize Firebase
+    <header>
+
+      <section class="header_øverst">
+
+
+        <section class="lang">
+          <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
+        </section>
+
+        <section class="usynlig">
+
+        </section>
+
+        <section class="logo">
+          <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
+        </section>
+
+
+        <section class="usynlig1">
+        </section>
+
+
+
+
+        <section class="lenke logginn">
+
+
+          <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
+
+          <a href="logginn.html"><br>LOGG INN</a>
+
+        </section>
+
+
+
+
+
+        <section class="lenke logginn">
+
+          <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
+
+          <a href="ønskeliste.html">ØNSKELISTE</a>
+
+        </section>
+
+        <section class="lenke logginn">
+
+
+          <a href="logginn.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
+
+          <a href="l"><br>KURV</a>
+
+        </section>
+
+      </section>
+
+
+      <section class="søkemotor">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <input type="text" placeholder="Søk etter klær eller merker...">
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </section>
+
+
+      <nav class="navigation">
+
+
+
+
+        <section class="dropned">
+          <a href="klær.html" class="dropknapp">Klær</a>
+          <section class="dropned-content">
+            <a href="klær.html" onclick="gensere1()">gensere</a>
+            <a onclick="bukser1()">Bukser</a>
+            <a onclick="skjorter1()">skjorter</a>
+          </section>
+        </section>
+
+
+
+        <section class="dropned">
+          <a class="dropknapp" onclick="Sport1()">Sport</a>
+
+          <section class="dropned-content">
+            <a href="virker_ikke.html" onclick="sport1()">Sport overdeler</a>
+            <a href="virker_ikke.html">Sport underdeler</a>
+            <a href="virker_ikke.html">Sport relatert</a>
+          </section>
+        </section>
+
+        <section class="dropned">
+          <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
+          <section class="dropned-content">
+            <a onclick="bukser1()"> klokker</a>
+            <a href="virker_ikke.html">bagger</a>
+            <a href="virker_ikke.html">caps</a>
+          </section>
+        </section>
+
+
+        <section class="dropned">
+          <a class="dropknapp" onclick="Sko1()">Sko</a>
+        </section>
+
+        <section class="dropned">
+          <a class="dropknapp" onclick="Salg_alle()">Nyheter</a>
+          </a>
+        </section>
+
+        <section class="dropned">
+          <a class="dropknapp" onclick="Salg_alle()">Salg</a>
+          </a>
+        </section>
+
+
+
+
+      </nav>
+
+    </header>
+    <button class="tilbake_knapp" onclick="goBack()">
+      <--Tilbake</button>
+      <h1>LOGG INN</h1>
+        <div id="firebaseui-auth-container"></div>
+        <!-- LIM INN FIREBASE-KODEN DIN HER -->
+        <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+        <script>
+          // Initialize Firebase
   var config = {
     apiKey: "AIzaSyBXt6HrwrG3frVTfTwqeXKUOOmNr5jwON0",
     authDomain: "hoved-klesbutikk-riktig.firebaseapp.com",
@@ -37,9 +154,9 @@
   };
   firebase.initializeApp(config);
 </script>
-      <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
-      <script>
-        // Initialize Firebase
+        <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+        <script>
+          // Initialize Firebase
         var config = {
           apiKey: "AIzaSyBw148vUQE0uezb6DbQLxjE1j9_pUOzZSo",
           authDomain: "chat-281af.firebaseapp.com",
@@ -50,36 +167,156 @@
         };
         firebase.initializeApp(config);
       </script>
-<!-- DENNE KODEN KOMMER FRA Firebase.auth -->
-      <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-      <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
-      <script type="text/javascript">
-      // FirebaseUI config.
-      var uiConfig = {
-          signInSuccessUrl: 'index.html',
-          signInOptions: [
-          // Leave the lines as is for the providers you want to offer your users.
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-          firebase.auth.EmailAuthProvider.PROVIDER_ID
-          ],
-          // tosUrl and privacyPolicyUrl accept either url string or a callback
-          // function.
-          // Terms of service url/callback.
-          tosUrl: '<your-tos-url>',
-          // Privacy policy url/callback.
-          privacyPolicyUrl: function() {
-          window.location.assign('<your-privacy-policy-url>');
+        <!-- DENNE KODEN KOMMER FRA Firebase.auth -->
+        <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+        <script type="text/javascript">
+          // FirebaseUI config.
+          var uiConfig = {
+            signInSuccessUrl: 'index.html',
+            signInOptions: [
+              // Leave the lines as is for the providers you want to offer your users.
+              firebase.auth.EmailAuthProvider.PROVIDER_ID
+            ],
+            // tosUrl and privacyPolicyUrl accept either url string or a callback
+            // function.
+            // Terms of service url/callback.
+            tosUrl: '<your-tos-url>',
+            // Privacy policy url/callback.
+            privacyPolicyUrl: function() {
+              window.location.assign('<your-privacy-policy-url>');
+            }
+          };
+          // Initialize the FirebaseUI Widget using Firebase.
+          var ui = new firebaseui.auth.AuthUI(firebase.auth());
+          // The start method will wait until the DOM is loaded.
+          ui.start('#firebaseui-auth-container', uiConfig);
+        </script>
+        <script>
+          function goBack() {
+            window.history.back();
           }
-      };
-      // Initialize the FirebaseUI Widget using Firebase.
-      var ui = new firebaseui.auth.AuthUI(firebase.auth());
-      // The start method will wait until the DOM is loaded.
-      ui.start('#firebaseui-auth-container', uiConfig);
-      </script>
-      <script>
-      function goBack() {
-        window.history.back();
-      }
-      </script>
+        </script>
+
+
+
+
+          <section class="reklame2">
+            <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
+          </section>
+          <footer>
+          </footer>
+
+
+          <footer>
+
+            <section class="hele_footer">
+
+
+              <section class="om_oss_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>INFORMASJON</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="logginn.html"> LOGG INN</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="virker_ikke.html">FÅ NYHETSBREV</a></td>
+                    </tr>
+                  </tbody>
+
+                </table>
+              </section>
+
+              <section class="">
+                <table>
+                  <thead>
+                    <tr>
+                      <th><a href="index.html">VARER</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td> <a href="klær.html">klær</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="sport.html">sport</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="sko.html">sko</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="tilbehør.html">tilbehør</a></td>
+                    </tr>
+                  </tbody>
+
+                </table>
+
+              </section>
+
+              <section class="oss_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th><a href="oss.html">OM OSS</a></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="oss.html">søk jobb</a></td>
+                    </tr>
+                    <tr>
+                      <td><a href="oss.html">ansatte</a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td><a href="oss.html">historikk</a></td>
+                    </tr>
+
+                  </tbody>
+
+                </table>
+
+              </section>
+
+
+
+
+              <section class="sosial_footer">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Følg oss</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                      <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                      <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                    </tr>
+
+                  </tbody>
+
+                </table>
+              </section>
+
+
+
+            </section>
+          </footer>
   </body>
+
 </html>
