--- a/KaranSinMorsommeFerie/A Hoved Database/handlekurv.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/handlekurv.html
@@ -130,7 +130,7 @@
     <div class="shopping-cart">
   <!-- Title -->
   <div class="title">
-    Shopping Bag
+   HANDLEKURV
   </div>
 
   <!-- Product #1 -->
@@ -145,9 +145,9 @@
     </div>
 
     <div class="description">
-      <span>Common Projects</span>
-      <span>Bball High</span>
-      <span></span>grå
+      <span>ADDIDAS</span>
+      <span>joggebukse</span>
+      <span>Grå</span>
     </div>
 
     <div class="quantity">
@@ -175,9 +175,9 @@
     </div>
 
     <div class="description">
-      <span>Maison Margiela</span>
-      <span>Future Sneakers</span>
-      <span>Hvit</span>
+      <span>TOMMY HILFIGER</span>
+      <span>short Jacket</span>
+      <span>Blå</span>
     </div>
 
     <div class="quantity">
@@ -205,8 +205,8 @@
     </div>
 
     <div class="description">
-      <span>Our Legacy</span>
-      <span>Brushed Scarf</span>
+      <span>LYLE&SCOTT</span>
+      <span>Brushed sweater</span>
       <span>Grå</span>
     </div>
 
