--- a/KaranSinMorsommeFerie/A Hoved Database/kundeservice-ferdig.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/kundeservice-ferdig.html
@@ -140,4 +140,125 @@
   <main>
     <h1 class="kundeservice_ferdig">Takk for din innsendelse</h1>
   </main>
-logginn.html
+
+    <!-- kode for reklamen-->
+    <section class="reklame2">
+      <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
+    </section>
+
+    <!-- kode for innholdet i footer -->
+    <footer>
+
+      <section class="hele_footer">
+
+        <!-- kode for linje 1 i footer -->
+        <section class="om_oss_footer">
+          <table>
+            <thead>
+              <tr>
+                <th>INFORMASJON</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="logginn.html"> LOGG INN</a></td>
+              </tr>
+              <tr>
+                <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+              </tr>
+              <tr>
+                <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+              </tr>
+              <tr>
+                <td><a href="oss.html">FÅ NYHETSBREV</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+        </section>
+
+        <!-- kode for linje 2 i footer -->
+        <section class="oss_footer">
+          <table>
+            <thead>
+              <tr>
+                <th><a href="index.html">VARER</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td> <a href="klær.html">klær</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="sport.html">sport</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="sko.html">sko</a></td>
+              </tr>
+              <tr>
+                <td><a href="tilbehor.html">tilbehør</a></td>
+              </tr>
+            </tbody>
+
+          </table>
+
+        </section>
+
+        <!-- kode for linje 3 i footer -->
+        <section class="oss_footer">
+          <table>
+            <thead>
+              <tr>
+                <th><a href="oss.html">OM OSS</a></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="oss.html">søk jobb</a></td>
+              </tr>
+              <tr>
+                <td><a href="oss.html">ansatte</a>
+                </td>
+              </tr>
+              <tr>
+                <td><a href="oss.html">historikk</a></td>
+              </tr>
+
+            </tbody>
+
+          </table>
+
+        </section>
+
+
+
+        <!-- del av footer med sosiale medier bilder -->
+        <section class="sosial_footer">
+          <table>
+            <thead>
+              <tr>
+                <th>Følg oss</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+              </tr>
+
+            </tbody>
+
+          </table>
+        </section>
+
+
+
+      </section>
+    </footer>
+    <!-- footer slutter her-->
+
+
+    <!-- javascript starter under her -->
