--- a/KaranSinMorsommeFerie/A Hoved Database/skjorter.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/skjorter.html
@@ -170,7 +170,6 @@
         <button onclick="myFunction3()" class="dropbtn">Pris</button>
         <div id="myDropdown3" class="dropdown-content">
           <a onclick="skjorter1()">ALLE</a>
-          <a onclick="pris_500()">100-500 kr</a>
           <a onclick="pris_1000()">500-1000 kr</a>
           <a onclick="pris_10_000()">1000-10 000 kr</a>
         </div>
@@ -377,10 +376,6 @@
     const skjorter = db.ref("varer/skjorter");
 
 
-
-
-
-
     function visVare(snapshot) {
       //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
       let varer = snapshot.val();
@@ -388,20 +383,28 @@
       let parent = snapshot.ref.parent.key;
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
+      let prisTekst = ``;
+      if(varer.Salg === true){
+        prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
+      }
+      else{
+        prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
+      }
 
-      console.log(snapshot.val())
+        console.log(snapshot.val())
 
       main.innerHTML +=
         `
         <article class="vare">
-<a href="klesplagg.html?id=${key}&parent=${parent}">
+      <a href="klesplagg.html?id=${key}&parent=${parent}">
         <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
         <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-        <p class="pris_varer">Pris: ${varer.pris} kr</p>
+        ${prisTekst}
         </a>
         </article>
       `;
-    }
+      }
+
 
 
 
@@ -512,7 +515,6 @@
 
     function pris_500() {
       main.innerHTML = ``;
-
       skjorter
         .orderByChild("pris")
         .startAt(100)
