--- a/KaranSinMorsommeFerie/A Hoved Database/jakker.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/jakker.html
@@ -379,10 +379,6 @@
     const jakker = db.ref("varer/jakker");
 
 
-
-
-
-
     function visVare(snapshot) {
       //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
       let varer = snapshot.val();
@@ -390,20 +386,28 @@
       let parent = snapshot.ref.parent.key;
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
+      let prisTekst = ``;
+      if(varer.Salg === true){
+        prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
+      }
+      else{
+        prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
+      }
 
-      console.log(snapshot.val())
+        console.log(snapshot.val())
 
       main.innerHTML +=
         `
         <article class="vare">
-<a href="klesplagg.html?id=${key}&parent=${parent}">
+      <a href="klesplagg.html?id=${key}&parent=${parent}">
         <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
         <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-        <p class="pris_varer">Pris: ${varer.pris} kr</p>
+        ${prisTekst}
         </a>
         </article>
       `;
-    }
+      }
+
 
 
 
