--- a/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
@@ -22,34 +22,34 @@
     </script>
 
 
-
 </head>
 
 <body>
   <header>
 
+
     <section class="header_øverst">
 
-
+      <!-- kode for den lange hvite linjen øverst -->
       <section class="lang">
-        <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
+        Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt
       </section>
 
       <section class="usynlig">
 
       </section>
 
+      <!-- kode for logoen -->
       <section class="logo">
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
+      <!-- kode for usynlig del -->
       <section class="usynlig1">
       </section>
 
 
-
-
+      <!-- kode for logg inn, og handlekurv knappene er under her  -->
       <section class="lenke logginn">
 
 
@@ -60,10 +60,8 @@
       </section>
 
 
-
-
-
-      <section class="lenke logginn">
+      <!-- kode for  ønskeliste og knappene er under her  -->
+      <section class="lenke logginn ønskeliste">
 
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
 
@@ -71,18 +69,21 @@
 
       </section>
 
-      <section class="lenke logginn">
+      <section class="lenke logginn handlekurv">
 
 
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
 
         <a href=handlekurv.html><br>KURV</a>
 
+
       </section>
 
     </section>
+    <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
 
 
+    <!-- kode for søkefeltet -->
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <input type="text" placeholder="Søk etter klær eller merker...">
@@ -90,208 +91,228 @@
     </section>
 
 
+
+    <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
+      <!-- kode for dropned for navigasjons baren-->
+      <section class="dropned">
+        <a href="klær.html" class="dropknapp">Klær</a>
+        <section class="dropned-content">
+          <a href="gensere.html">gensere</a>
+          <a href="bukser.html">Bukser</a>
+          <a href="skjorter.html">skjorter</a>
+          <a href="jakker.html">jakker</a>
+
+        </section>
+      </section>
 
 
-            <section class="dropned">
-              <a href="klær.html" class="dropknapp">Klær</a>
-              <section class="dropned-content">
-                <a href="gensere.html">gensere</a>
-                <a href="bukser.html">Bukser</a>
-                <a href="skjorter.html">skjorter</a>
-                <a href="jakker.html">jakker</a>
+      <!-- kode for knapper som ikke har dropdown i navigasjons baren-->
+      <section class="dropned">
+        <a href="sport.html" class="dropknapp">Sport</a>
 
-              </section>
-            </section>
+      </section>
 
+      <section class="dropned">
+        <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
+      </section>
 
 
-            <section class="dropned">
-              <a href="sport.html" class="dropknapp" >Sport</a>
-            </section>
+      <section class="dropned">
+        <a href="sko.html" class="dropknapp">Sko</a>
+      </section>
 
-            <section class="dropned">
-              <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
-            </section>
+      <section class="dropned">
+        <a href="nyheter.html" class="dropknapp">Nyheter</a>
 
+      </section>
 
-            <section class="dropned">
-              <a href="sko.html" class="dropknapp" >Sko</a>
-            </section>
+      <section class="dropned">
+        <a href="salg.html" class="dropknapp">Salg</a>
 
-            <section class="dropned">
-              <a href="nyheter.html" class="dropknapp" >Nyheter</a>
-
-            </section>
-
-            <section class="dropned">
-              <a href="salg.html" class="dropknapp">Salg</a>
-
-            </section>
-
-
+      </section>
 
 
     </nav>
+    <!-- kode for navigasjons varen er slutt  -->
 
   </header>
+  <!-- slutt på kode for header-->
 
 
-  <main>
+  <!-- kode for tilbake knapp -->
+  <button class="tilbake_knapp" onclick="goBack()">
+    <--Tilbake </button>
 
-  </main>
+<!--kode for main under her-->
+<main>
+  <section id="main">
 
-
-
-  <section class="reklame2">
-    <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
   </section>
-  <footer>
-  </footer>
 
+<section class="lignendeProdukter">
+<h1>Folk liker også</h1>
+</section>
+  <section class="seclignendeProdukter">
 
-  <footer>
+  </section>
+</main>
 
-    <section class="hele_footer">
-
-
-      <section class="om_oss_footer">
-        <table>
-          <thead>
-            <tr>
-              <th>INFORMASJON</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="logginn.html"> LOGG INN</a></td>
-            </tr>
-            <tr>
-              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
-            </tr>
-            <tr>
-              <td><a href="kundeservice.html">KONTAKT OSS</a></td>
-            </tr>
-            <tr>
-              <td><a href="oss.html">FÅ NYHETSBREV</a></td>
-            </tr>
-          </tbody>
-
-        </table>
-      </section>
-
-      <section class="">
-        <table>
-          <thead>
-            <tr>
-              <th><a href="index.html">VARER</a></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td> <a href="klær.html">klær</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="sport.html">sport</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="sko.html">sko</a></td>
-            </tr>
-            <tr>
-              <td><a href="tilbehor.html">tilbehør</a></td>
-            </tr>
-          </tbody>
-
-        </table>
-
-      </section>
-
-      <section class="oss_footer">
-        <table>
-          <thead>
-            <tr>
-              <th><a href="oss.html">OM OSS</a></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="oss.html">søk jobb</a></td>
-            </tr>
-            <tr>
-              <td><a href="oss.html">ansatte</a>
-              </td>
-            </tr>
-            <tr>
-              <td><a href="oss.html">historikk</a></td>
-            </tr>
-
-          </tbody>
-
-        </table>
-
+      <!-- kode for reklamen-->
+      <section class="reklame2">
+        <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
       </section>
 
 
-      <section class="sosial_footer">
-        <table>
-          <thead>
-            <tr>
-              <th>Følg oss</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
-              <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
-              <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
-            </tr>
+        <!-- kode for innholdet i footer -->
+        <footer>
 
-          </tbody>
+          <section class="hele_footer">
 
-        </table>
-      </section>
+            <!-- kode for linje 1 i footer -->
+            <section class="om_oss_footer">
+              <table>
+                <thead>
+                  <tr>
+                    <th>INFORMASJON</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><a href="logginn.html"> LOGG INN</a></td>
+                  </tr>
+                  <tr>
+                    <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                  </tr>
+                  <tr>
+                    <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+                  </tr>
+                  <tr>
+                    <td><a href="oss.html">FÅ NYHETSBREV</a></td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </section>
+
+            <!-- kode for linje 2 i footer -->
+            <section class="oss_footer">
+              <table>
+                <thead>
+                  <tr>
+                    <th><a href="index.html">VARER</a></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td> <a href="klær.html">klær</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="sport.html">sport</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="sko.html">sko</a></td>
+                  </tr>
+                  <tr>
+                    <td><a href="tilbehor.html">tilbehør</a></td>
+                  </tr>
+                </tbody>
+
+              </table>
+
+            </section>
+
+            <!-- kode for linje 3 i footer -->
+            <section class="oss_footer">
+              <table>
+                <thead>
+                  <tr>
+                    <th><a href="oss.html">OM OSS</a></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><a href="oss.html">søk jobb</a></td>
+                  </tr>
+                  <tr>
+                    <td><a href="oss.html">ansatte</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="oss.html">historikk</a></td>
+                  </tr>
+
+                </tbody>
+
+              </table>
+
+            </section>
 
 
 
-    </section>
-  </footer>
-  <script>
-  const main = document.querySelector("main");
+            <!-- del av footer med sosiale medier bilder -->
+            <section class="sosial_footer">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Følg oss</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                    <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                    <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                  </tr>
+
+                </tbody>
+
+              </table>
+            </section>
 
 
-    let url_string = window.location.href;
-    let url = new URL(url_string);
-    let id = url.searchParams.get("id");
-    let parentId = url.searchParams.get("parent");
-    //let parentParent = url.searchParams.get("parentParent");
+
+          </section>
+        </footer>
+        <!-- footer slutter her-->
 
 
-    console.log("id:" + id );
+        <!-- javascript starter under her -->
+      <script>
+        const main = document.querySelector("#main");
+        const seclignendeProdukter = document.querySelector(".seclignendeProdukter");
 
-    //Skriv referanser til database under her:
-    const db = firebase.database();
-    const Valgt_vare = db.ref("varer/"+parentId+"/"+id);
-    const bukser = db.ref("varer/bukser");
-    const skjorter = db.ref("varer/skjorter");
-    const gensere = db.ref("varer/gensere");
-    const sport = db.ref("varer/sport");
-    const jakker = db.ref("varer/jakker");
-    const sko = db.ref("varer/sko");
-    const tilbehor = db.ref("varer/tilbehor");
+        let url_string = window.location.href;
+        let url = new URL(url_string);
+        let id = url.searchParams.get("id");
+        let parentId = url.searchParams.get("parent");
+        //let parentParent = url.searchParams.get("parentParent");
 
-    Valgt_vare.on("value",visVare);
+        console.log("id:" + id);
+
+        //Skriv referanser til database under her:
+        const db = firebase.database();
+        const Valgt_vare = db.ref("varer/" + parentId + "/" + id);
+        const bukser = db.ref("varer/bukser");
+        const skjorter = db.ref("varer/skjorter");
+        const gensere = db.ref("varer/gensere");
+        const sport = db.ref("varer/sport");
+        const jakker = db.ref("varer/jakker");
+        const sko = db.ref("varer/sko");
+        const tilbehor = db.ref("varer/tilbehor");
+
+        Valgt_vare.on("value", visVare);
         // Funksjon som kjøres når siden lastes
 
-    function visVare(snapshot) {
-      let key = snapshot.key;
-      let data = snapshot.val();
-      let parent = snapshot.ref.parent.key;
-      //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
-      main.innerHTML +=
-        `
+        function visVare(snapshot) {
+          let key = snapshot.key;
+          let data = snapshot.val();
+          let parent = snapshot.ref.parent.key;
+          //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
+          main.innerHTML +=`
 <section class="bilde_liten">
 <section class="bilde_liten1">  <img src="${data.bilde2}" alt=""> </section>
 <section class="bilde_liten2">  <img src="${data.bilde3}" alt=""> </section>
@@ -299,23 +320,90 @@
 <section class="bilde_stor">  <img src="${data.bilde1}" alt=""> </section>
 <section class="varer_info">
 <h1 class="navn_varer">${data.modell} - ${data.merke1}</h1>
-<p class="pris_varer">Pris: ${data.pris} kr  <a href="kundeservice.html" class="tilbakemelding">Tilbakemelding</a> </p>
+<p class="pris_varer">Pris: ${data.pris} kr
+<a href="kundeservice.html" class="tilbakemelding">Tilbakemelding</a> </p>
 <section class="styled-select slate">
   <select>
-    <option value="bilde" class="hver_str_alene"> Størrelse </option>
-    <option value="juice">XS</option>
-    <option value="vann">S</option>
-    <option value="vann">M</option>
-    <option value="vann">L</option>
-    <option value="vann">XL</option>
+    <option value="størrelse" class="hver_str_alene">STØRRELSE</option>
+    <option value="størrelse">BLÅ</option>
+    <option value="størrelse">SVART</option>
+    <option value="størrelse">RØD</option>
+    <option value="størrelse">GRÅ</option>
+    <option value="størrelse">BRUN</option>
   </select>
+  <section class="styled-select slate">
+    <select>
+      <option value="størrelse" class="hver_str_alene">FARGE</option>
+      <option value="størrelse">XS</option>
+      <option value="størrelse">S</option>
+      <option value="størrelse">M</option>
+      <option value="størrelse">L (kun 3 igjen)</option>
+      <option value="størrelse">XL</option>
+    </select>
+    <section class="styled-select slate">
+      <select>
+        <option value="størrelse" class="hver_str_alene">ANTALL</option>
+        <option value="størrelse">1</option>
+        <option value="størrelse">2</option>
+        <option value="størrelse">3</option>
+        <option value="størrelse">4</option>
+        <option value="størrelse">ikke flere på lager</option>
+      </select>
 </section>
 
-<button type="submit" class="handlekurv_knapp"> Legg til i handlekurv</button>
+<button type="submit" class="handlekurv_knapp"> Legg til i handlekurv
+</button>
+`;
+      }
+
+function genererHTML(snapshot){
+  let key = snapshot.key;
+  let data = snapshot.val();
+  let parent = snapshot.ref.parent.key;
+  seclignendeProdukter.innerHTML +=`
+<section class="lignende_hvert_produkt">
+<section class="bilde_liten">
+<a href="klesplagg.html?id=${key}&parent=${parent}" class="link_lignende">
+<section class="bilde_liten_lignende"> <img src="${data.bilde2}" alt=""> </section>
+</section>
+<section class="lignende_info">
+<h1 class="navn_varer">${data.modell} - ${data.merke1}</h1>
+<p class="pris_varer">Pris: ${data.pris} kr </p>
+  </a>
+<a href="kundeservice.html" class="tilbakemelding_lignende">Tilbakemelding</a>
+</section>
+</section>
 
 `;
-    }
-  </script>
+}
+        function lignendeProdukter() {
+          skjorter
+            .limitToFirst(1)
+            .on("child_added", genererHTML);
+          gensere
+            .limitToFirst(1)
+            .on("child_added", genererHTML);
+          sport
+            .limitToFirst(1)
+            .on("child_added", genererHTML);
+          jakker
+          .limitToFirst(1)
+            .on("child_added", genererHTML);
+         bukser
+         .limitToFirst(1)
+         .on("child_added", genererHTML);
+         tilbehor
+         .limitToFirst(1)
+         .on("child_added", genererHTML);
+        };
+        sko
+        .limitToFirst(1)
+        .on("child_added", genererHTML);
+
+        lignendeProdukter();
+
+      </script>
+
 
 
 </body>
