--- a/KaranSinMorsommeFerie/A Hoved Database/salg.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/salg.html
@@ -133,80 +133,13 @@
       </section>
 
 
-
-
     </nav>
 
   </header>
 
 
 
-
-
-
   <section class="klær_hoved">
-
-
-
-    <section class="usynlig_valg_linje"></section>
-    <div class="valg_klær1">
-
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Merke</button>
-        <div id="myDropdown" class="dropdown-content">
-          <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-          <a onclick="klaer()">ALLE</a>
-          <a onclick="merke_klaer()">RALPH LAUREN</a>
-          <a onclick="merke2_klaer()">HUGO BOSS</a>
-          <a onclick="merke3_klaer()">GANT</a>
-          <a onclick="merke4_klaer()">TOMMY HILFIGER</a>
-          <a onclick="merke5_klaer()">VERSACE</a>
-          <a onclick="merke6_klaer()">LYLE&SCOTT</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction2()" class="dropbtn">Anledning</button>
-        <div id="myDropdown2" class="dropdown-content">
-          <a onclick="klaer()">ALLE</a>
-          <a onclick="anledning_fritid()">fritid</a>
-          <a onclick="anledning_formel()">formel</a>
-          <a onclick="anledning_casual()">casual</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction3()" class="dropbtn">Pris</button>
-        <div id="myDropdown3" class="dropdown-content">
-          <a onclick="klaer()">ALLE</a>
-          <a onclick="pris_500()">100-500 kr</a>
-          <a onclick="pris_1000()">500-1000 kr</a>
-          <a onclick="pris_10_000()">1000-10 000 kr</a>
-        </div>
-      </div>
-
-
-
-
-      <div class="dropdown">
-        <button onclick="myFunction4()" class="dropbtn">Farge</button>
-        <div id="myDropdown4" class="dropdown-content">
-          <a onclick="farge_klaer_alle()">ALLE</a>
-          <a onclick="farge_klaer_hvit()">HVIT</a>
-          <a onclick="farge_klaer_svart()">SVART</a>
-          <a onclick="farge_klaer_blå()">BLÅ</a>
-
-        </div>
-      </div>
-
-
-
-
-
-    </div>
-
-
 
 
     <!-- kode for å sortere i tabellen-->
@@ -217,45 +150,11 @@
         <li>
           <section class="klær_tekst"><a onclick="Salg_alle()">Salg</a>
           </section>
-        </li>
-        <li><a href="skjorter.html" class="tabell_ord">Skjorter </a></li>
-        <li><a href="jakker.html" class="tabell_ord">Jakker</a></li>
-        <li><a href="gensere.html" class="tabell_ord">Gensere</a></li>
-        <li><a href="bukser.html" class="tabell_ord">Bukser </a></li>
 
 
       </ul>
     </section>
-    <!-- kode i linjen under den første linjen med sortering. for å sortere etter bærkraftig og flerer forskjellige ting under knappen sorter-->
-    <section class="linje2_valg">
 
-      <!-- sorterer etter bærekraftig-->
-      <section class="Bærekraftig">
-        Bærekraftig:
-        <input class="Bærekraftig_boks" type="checkbox" onclick="baerekraftig()"></input>
-      </section>
-
-      <!--usynlig del i linje 2-->
-      <section class="usynlig_linje2_valg">
-
-      </section>
-
-      <!-- sorterings knapp i linje 2-->
-      <p class="sorter_etter">Sorter etter:</p>
-      <div class="sortering_hele">
-        <button onclick="myFunction5()" class="dropbtn">Sorter</button>
-        <div id="myDropdown5" class="dropdown-content">
-          <a onclick="popoulære_klaer()">populære</a>
-          <a onclick="nyheter_klaer()">Nyheter</a>
-          <a onclick="billigste_klaer()">billigste</a>
-          <a onclick="dyreste_klaer()">dyreste</a>
-
-
-        </div>
-      </div>
-
-
-    </section>
 
 
     <main>
@@ -408,23 +307,28 @@
       let parent = snapshot.ref.parent.key;
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
-
-      if(varer.tilbud)
+      let prisTekst = ``;
+      if(varer.Salg === true){
+        prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
+      }
+      else{
+        prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
+      }
 
         console.log(snapshot.val())
 
       main.innerHTML +=
         `
         <article class="vare">
-<a href="klesplagg.html?id=${key}&parent=${parent}">
+      <a href="klesplagg.html?id=${key}&parent=${parent}">
         <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
         <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-
-        <p class="pris_varer">Pris: ${varer.pris} kr</p>
+        ${prisTekst}
         </a>
         </article>
       `;
-    }
+      }
+
 
 
 
@@ -1097,6 +1001,31 @@
                 .equalTo(true)
                 .on("child_added", visVare);
             }
+
+
+
+
+
+                function nyheter_klaer() {
+                  main.innerHTML = ``;
+                  bukser
+                    .orderByChild("Nyheter")
+                    .equalTo(true)
+                    .on("child_added", visVare);
+                  skjorter
+                    .orderByChild("Nyheter")
+                    .equalTo(true)
+                    .on("child_added", visVare);
+
+                  gensere
+                    .orderByChild("Nyheter")
+                    .equalTo(true)
+                    .on("child_added", visVare);
+                  jakker
+                    .orderByChild("Nyheter")
+                    .equalTo(true)
+                    .on("child_added", visVare);
+                }
 
 
 
