--- a/KaranSinMorsommeFerie/A Hoved Database/sport.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/sport.html
@@ -159,7 +159,7 @@
           <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
           <a onclick="sport1()">ALLE</a>
           <a onclick="merke_klaer()">NIKE</a>
-        <button onclick="myFunction2()" class="dropbtn">Type</button>
+          <a onclick="merke2_klaer()">HUGO BOSS</a>
           <a onclick="merke3_klaer()">ADIDAS</a>
         </div>
 
@@ -383,20 +383,27 @@
       let parent = snapshot.ref.parent.key;
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
+      let prisTekst = ``;
+      if(varer.Salg === true){
+        prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
+      }
+      else{
+        prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
+      }
 
-      console.log(snapshot.val())
+        console.log(snapshot.val())
 
       main.innerHTML +=
         `
-          <article class="vare">
-  <a href="klesplagg.html?id=${key}&parent=${parent}">
-          <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
-          <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
-          <p class="pris_varer">Pris: ${varer.pris} kr</p>
-          </a>
-          </article>
-        `;
-    }
+        <article class="vare">
+      <a href="klesplagg.html?id=${key}&parent=${parent}">
+        <section class="bilde">  <img src="${varer.bilde1}" alt=""> </section>
+        <h1 class="navn_varer">${varer.modell} - ${varer.merke1}</h1>
+        ${prisTekst}
+        </a>
+        </article>
+      `;
+      }
 
 
 
